<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ce2103.itcr.meshmemory.gui.Datos_nodo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_your_connection_data"
        android:textStyle="italic"
        android:textSize="25dp"
        android:id="@+id/txtdt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:id="@+id/txtmng"
        android:layout_below="@+id/txtdt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puerto"
        android:textStyle="italic"
        android:textSize="20sp"
        android:id="@+id/txtpto"
        android:layout_below="@+id/txtmng"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtpto"
        android:layout_alignTop="@+id/txtpto"
        android:layout_alignEnd="@+id/txtdt"
        android:layout_toEndOf="@+id/txtmng" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:textStyle="italic"
        android:textSize="20sp"
        android:id="@+id/txtIP"
        android:layout_below="@+id/edtpto"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextIP"
        android:layout_centerVertical="true"
        android:layout_alignTop="@id/txtIP"
        android:layout_alignStart="@+id/edtpto"
        android:layout_alignEnd="@+id/txtdt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nodo"
        android:id="@+id/txtnd"
        android:textStyle="bold|italic"
        android:textSize="25dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memoria"
        android:textStyle="italic"
        android:textSize="20sp"
        android:id="@+id/txtmem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtnd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtmem"
        android:layout_alignTop="@+id/txtmem"
        android:layout_toEndOf="@+id/txtmem"
        android:layout_alignEnd="@+id/editTextIP" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:id="@+id/btnrdy"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cellphone_number"
        android:textStyle="italic"
        android:textSize="20sp"
        android:id="@+id/txtnum"
        android:layout_below="@+id/edtmem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtnum"
        android:layout_alignTop="@+id/txtnum"
        android:layout_alignEnd="@+id/txtdt"
        android:layout_toEndOf="@+id/txtnum" />
</RelativeLayout>
