<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ce2103.itcr.meshmemory.gui.Master">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mapa_de_memoria"
        android:id="@+id/btnmpmem"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/available_memory"
        android:id="@+id/btnmemav"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/btnmpmem"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_status"
        android:id="@+id/btnsync"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/btnmemav"
        android:layout_alignEnd="@+id/btnerlogs" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_logs"
        android:id="@+id/btnerlogs"
        android:layout_marginBottom="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btnmpmem" />
</RelativeLayout>
