<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/circuits"
    tools:context="com.ce2103.itcr.meshmemory.gui.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        android:id="@+id/txtrole"
        android:textStyle="italic"
        android:textColor="#006064"
        android:textSize="40sp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:id="@+id/btnMng"
        android:layout_below="@+id/txtrole"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2_name"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:id="@+id/btnode"
        android:layout_below="@+id/btnMng"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

</RelativeLayout>

